--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": ">=16.8.0"
   },
-  "homepage": "https://hexadashnextjs.vercel.app/nextjs-mbs",
+  "homepage": "https://hexadashnextjs.vercel.app/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -57,6 +57,7 @@
     "react-fontawesome": "^1.7.1",
     "react-google-charts": "^4.0.1",
     "react-i18next": "^13.2.0",
+    "react-icons": "^5.2.1",
     "react-id-swiper": "^4.0.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
@@ -67,6 +68,7 @@
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.15.0",
     "react-simple-maps": "^3.0.0",
+    "react-slick": "^0.30.2",
     "react-svg": "^16.1.22",
     "react-tagsinput": "^3.20.3",
     "react-tooltip": "^5.21.1",
