pushing minor file updates that I can't remember

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,11 +21,17 @@
   },
   "plugins": ["react", "import", "react-hooks"],
   "rules": {
-    "prettier/prettier": ["error", {
-      "endOfLine":"auto"
-    }],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "import/no-named-as-default-member": 0,
-    "import/order": [2, { "groups": ["external", "index", "sibling", "parent", "internal", "builtin"] }],
+    "import/order": [
+      2,
+      { "groups": ["external", "index", "sibling", "parent", "internal", "builtin"] }
+    ],
     "react/jsx-filename-extension": [
       0,
       {
