--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,26 @@
 {
-
-    "trailingComma": "es5",
-  
-    "tabWidth": 4,
-  
-    "semi": false,
-  
-    "singleQuote": true
-  
+    "semi": true,
+    "trailingComma": "all",
+    "singleQuote": true,
+    "printWidth": 80,
+    "tabWidth": 2,
+    "bracketSpacing": true,
+    "jsxBracketSameLine": false,
+    "arrowParens": "always",
+    "endOfLine": "lf",
+    "overrides": [
+      {
+        "files": "*.md",
+        "options": {
+          "proseWrap": "always"
+        }
+      },
+      {
+        "files": "*.json",
+        "options": {
+          "printWidth": 100
+        }
+      }
+    ]
   }
+  
