before Auth0 removal

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "auth0-lock": "^12.1.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
     "dayjs": "^1.11.9",
     "emoji-picker-react": "^4.4.11",
@@ -42,6 +43,8 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "moment": "^2.29.4",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.3",
     "next": "^13.4.19",
     "next-redux-wrapper": "^8.1.0",
     "peity-react": "^0.0.7",
